kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-321ignition-service
  labels:
    app: web-321ignition
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: web-321ignition
