kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-321ignition-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-321ignition-ip
spec:
  backend:
    serviceName: web-321ignition-service
    servicePort: 80
